--- a/www/log.html
+++ b/www/log.html
@@ -11,7 +11,7 @@
 		</div>
 		<script>
 var xmlHttp = new XMLHttpRequest();
-xmlHttp.open( "GET", "https://bundr.net/anarchy/insecure/out.out?_=" + new Date().getTime(), false ); // false for synchronous request
+xmlHttp.open( "GET", "https://mc.bundr.net/insecure/out.out?_=" + new Date().getTime(), false ); // false for synchronous request
 xmlHttp.send( null );
 var out = xmlHttp.responseText;
 var tnd=document.createTextNode(out);
